--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,6 +212,27 @@ button {
     gap: 10px;
 }
 
+/* NRIC check for appointment */
+#verify-form {
+    display: none;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.6);  /* backdrop */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
 /* appointments cards */
 #dashboard {
     background-color: #EEE2DF;
