--- a/public/css/style.css
+++ b/public/css/style.css
@@ -427,17 +427,21 @@ button {
     margin-bottom: 0.8rem;
     font-weight: bold;
     color: #2c3e50;
+    font-family: "Inter", sans-serif;
+    text-decoration: underline;
 }
 
 .medicine-info p {
     margin: 0.4rem 0;
     font-size: 1.1rem;
     color: #34495e;
+    font-family: "Merriweather Sans", sans-serif;
 }
 
 .medicine-info p b {
     font-weight: 700;
     color: #2c3e50;
+    font-family: "Merriweather Sans", sans-serif;
 }
 
 .medicine-actions {
