--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,13 +123,28 @@ button {
     background-color: #555;
     color: white;
     font-weight: bold;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    align-items: center;
     box-shadow: 0px 5px 5px #40403E;
+}
+
+.profile-button {
+    background-color: #4A9ACB;
+    padding: 15px;
+    width: auto;
+    margin-top: 10px;
+}
+
+.login-button {
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: #555;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 /* form */
@@ -768,6 +783,12 @@ button {
     min-width: 100px;
 }
 
+/* index.htm */
+#main-content {
+    margin: 20px;
+    padding: 20px;
+}
+
 /* Login Form */
 #login-container {
     background: #ffffff;
@@ -816,6 +837,10 @@ button {
 /* Profile */
 #profile-section h2{
     font-size: 2em;
+}
+
+.btn-actions {
+    display: flex;
 }
 
 #profile-container {
